# rl_discord_scoreworm

./: .gitignore  CLAUDE.md  annotate_sessions.py  bot.py  capture.py  capture_templates.py  extract_session_templates.py  game_state.py  main.py  ocr.py  process_templates.py  pyproject.toml  rebuild_timer_templates.py  record_session.py  run_bot.bat  run_tests.bat  scoreworm.py
design/: architecture.md  ocr_pipeline.md  scoreworm_chart.md  test_fixtures.md
tests/: test_annotation_logic.py  test_e2e_game.py  test_ocr.py  test_team_side.py
tests/fixtures/result_screen/: README.md
tools/: annotate_sessions.py  extract_result_screen_fixtures.sh  extract_session_templates.py  extract_timer_templates.py  fetch_emoji.py  process_templates.py  rebuild_timer_templates.py  record_session.py
